Make sure entry titles don't overflow content area

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -6,6 +6,11 @@
 	margin: 0 0 1.5em;
 }
 
+.entry-title {
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
+}
+
 .byline,
 .updated:not(.published){
 	display: none;
