--- a/style.css
+++ b/style.css
@@ -641,6 +641,11 @@ a:active {
 	margin: 0 0 1.5em;
 }
 
+.entry-title {
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
+}
+
 .byline,
 .updated:not(.published) {
 	display: none;
